--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "telegraf": "^3.5.2"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "eslint": "^3.1.1",
-    "eslint-config-standard": "^6.2.0",
+    "ava": "^0.21.0",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-ava": "^4.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "should": "^11.1.0",
+    "eslint-plugin-standard": "^3.0.1",
     "telegraf": "^3.5.2"
   }
 }
